--- a/css/styles.css
+++ b/css/styles.css
@@ -54,6 +54,11 @@ body {
   color: var(--primary-text-color);
 }
 
+input,
+textarea {
+  outline: transparent;
+}
+
 .container {
   max-width: 1158px;
   padding: 0 15px;
@@ -701,6 +706,7 @@ footer .container {
   margin: 0 auto;
   padding: 16px 32px;
   display: block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button {
